After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739508 - lua-factory: Warn when dates are in an invalid format
lua-factory: Warn when dates are in an invalid format
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2014-11-01 18:18 UTC by Bastien Nocera
Modified: 2014-11-05 11:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
lua-factory: Warn when dates are in an invalid format (1.52 KB, patch)
2014-11-01 18:18 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-11-01 18:18:07 UTC
.
Comment 1 Bastien Nocera 2014-11-01 18:18:27 UTC
Created attachment 289799 [details] [review]
lua-factory: Warn when dates are in an invalid format

Instead of throwing g_date_time_unref() errors.
Comment 2 Victor Toso 2014-11-05 10:21:01 UTC
Review of attachment 289799 [details] [review]:

Besides the ;; looks good

::: src/lua-factory/grl-lua-library.c
@@ +286,3 @@
         if (type == G_TYPE_DATE_TIME) {
+          GDateTime *date;
+          const char *date_str = lua_tostring (L, -1);;

two semicolon
Comment 3 Bastien Nocera 2014-11-05 11:24:39 UTC
Attachment 289799 [details] pushed as cfbadd4 - lua-factory: Warn when dates are in an invalid format