lua-factory: Warn when dates are in an invalid format

Instead of throwing g_date_time_unref() errors.

https://bugzilla.gnome.org/show_bug.cgi?id=739508